# location-detection-ai

./: .gitignore  DEMO_PRESENTATION.md  DEMO_SCRIPT.md  LICENSE  README.md  SECURITY.md  SECURITY_SCAN_REPORT.md  firestore.rules  package-lock.json  package.json  preprocessing_log.txt  test_lambda_payload.json  test_real_payload.json
.claude/: rules.md
backend/: .env.example  jest.config.js  package.json  pyproject.toml  pytest.ini
backend/layers/firebase-admin/nodejs/: package.json
backend/scripts/: deploy-upload-handler.sh  deploy-user-handler.sh  generate_annotations.py
backend/src/detector/: .coverage  .gitignore  README.md  base_detector.py  cli.py  create_sample_blueprint.py  lambda_handler.py  opencv_detector.py  pyproject.toml  requirements.txt
backend/src/detector/tests/: conftest.py  test_opencv_detector.py
backend/src/lambdas/inference-trigger/: index.ts  package-lock.json  package.json
backend/src/lambdas/invite-handler/: index.ts  package.json
backend/src/lambdas/result-handler/: firebaseAdmin.ts  index.js  index.ts  package-lock.json  package.json
backend/src/lambdas/result-handler/lambdas/result-handler/: index.js
backend/src/lambdas/status-handler/: index.js  index.ts  package-lock.json  package.json
backend/src/lambdas/upload-handler/: auth.ts  index.js  index.ts  package-lock.json  package.json  rate-limiter.ts  tsconfig.json
backend/src/lambdas/upload-handler/lambdas/upload-handler/: auth.js  index.js  rate-limiter.js
backend/src/lambdas/upload-handler/middleware/: auth.js
backend/src/lambdas/upload-handler/utils/: firebaseAdmin.js
backend/src/lambdas/user-handler/: auth.js  auth.ts  index.js  index.ts  package-lock.json  package.json
backend/src/middleware/: auth.ts
backend/src/sagemaker/: DEPLOYMENT.md  Dockerfile  Dockerfile.yolo  README.md  build-and-push.sh  inference.py  lambda_handler.py  lambda_handler_yolo.py  requirements-yolo.txt  requirements.txt  serve.py
backend/src/sagemaker/detector/: __init__.py  opencv_detector.py  yolo_detector.py
backend/src/training/: README.md  requirements-sagemaker.txt  setup.sh
backend/src/training/converters/: yolo_converter.py
backend/src/training/parsers/: svg_parser.py
backend/src/training/scripts/: convert_yolo_to_json.py  launch_sagemaker_training.py  preprocess_dataset.py  requirements.txt  start_training.py  train_sagemaker.py  upload_to_s3.sh
backend/src/utils/: firebaseAdmin.js
backend/tests/: __init__.py  conftest.py  setup.ts  test_example.py
backend/tests/auth/: auth.test.ts
backend/tests/integration/: auth-endpoints.test.ts
backend/tests/utils/: authTestHelpers.ts
docs/: ADMIN_GUIDE.md  API.md  API_AUTH_ENDPOINTS.md  AUTHENTICATION_TESTS_SUMMARY.md  AWS_DEPLOYMENT_COMPLETE.md  BACKEND_AUTH_INTEGRATION.md  CONTRIBUTING.md  CURRENT_AUTH_STATUS.md  CURRENT_STATUS.md  DATASET_ANALYSIS.md  DEMO-MODE-SUMMARY.md  DEMO-MODE-VERIFICATION.md  DEMO-SCREENSHOTS.md  DEMO_QA_DELIVERABLES.md  (+47 more)
(+110 files in other folders)
